--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   provider: ^6.0.5
   cached_network_image: ^3.2.3
+  page_indicator: ^0.4.1
 
 dev_dependencies:
   flutter_test:
