--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.2.3
   page_indicator: ^0.4.1
   flutter_rating_bar: ^4.0.1
+  dio: ^5.0.2
 
 dev_dependencies:
   flutter_test:
