--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   page_indicator: ^0.4.1
   flutter_rating_bar: ^4.0.1
   dio: ^5.0.2
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
