upddated the code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
   - assets/images/placeholder.png
   - assets/images/signin.png
   - assets/images/signup.png
+  - assets/images/error-placeholder.png
 
 
 
