--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,11 @@ dependencies:
   supercharged: ^2.1.1
   sensors: ^2.0.3
   oauth2: ^2.0.1
+  geolocator: ^9.0.2
+  google_maps_flutter: ^2.2.5
+  permission_handler: ^10.2.0
+  http_mock_adapter: ^0.4.2
+  mockito: ^5.3.2
 
 dev_dependencies:
   flutter_test:
